--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,21 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-BR">
+
 <head>
   <meta charset="utf-8">
   <title>AngularBlog</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Roboto+Serif:opsz,wght@8..144,500&display=swap"
+    rel="stylesheet">
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
